implemented static version off iss pos

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "cordova-android": "^8.0.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "leaflet": "^1.5.1",
+    "leaflet-geosearch": "^2.7.0",
     "mithril": "^2.0.0-rc.4"
   },
   "devDependencies": {
@@ -32,7 +35,8 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "browser",
